Remove metadata cache