@@ -4,16 +4,15 @@ import com.ascendix.jdbc.salesforce.metadata.ColumnMap;
 import com.ascendix.jdbc.salesforce.metadata.TypeInfo;
 import com.ascendix.jdbc.salesforce.statement.ForcePreparedStatement;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CommandLogCachedResultSet extends CachedResultSet {
 
-    public static String LOG_COLUMN = "Log";
-    public static String ID_COLUMN = "Id";
+    private static final String LOG_COLUMN = "Log";
+    private static final String ID_COLUMN = "Id";
 
     private static final ColumnMap<String, Object> DEFAULT_COLUMN_MAP = new ColumnMap<String, Object>()
-        .add(LOG_COLUMN,"Value", TypeInfo.SHORT_TYPE_INFO)
-        .add(ID_COLUMN,"Value", TypeInfo.ID_TYPE_INFO);
+        .add(LOG_COLUMN, "Value", TypeInfo.SHORT_TYPE_INFO)
+        .add(ID_COLUMN, "Value", TypeInfo.ID_TYPE_INFO);
 
     public CommandLogCachedResultSet() {
         super(ForcePreparedStatement.createMetaData(DEFAULT_COLUMN_MAP));
@@ -22,7 +21,7 @@ public class CommandLogCachedResultSet extends CachedResultSet {
     public CommandLogCachedResultSet(List<String> commandLog) {
         super(commandLog.stream()
             .map(logLine -> new ColumnMap<String, Object>().add(LOG_COLUMN, logLine, TypeInfo.SHORT_TYPE_INFO))
-            .collect(Collectors.toList()), ForcePreparedStatement.createMetaData(DEFAULT_COLUMN_MAP));
+            .toList(), ForcePreparedStatement.createMetaData(DEFAULT_COLUMN_MAP));
     }
 
     public void log(String logLine) {
